# cloud-resume-challenge-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci-and-deploy.yml  security-scan.yml
src/: get_visitors.rs  lib.rs  main.rs  update_visitors.rs  utils.rs
terraform/: backend.tf  database.tf  dns.tf  frontend.tf  iam.tf  main.tf  outputs.tf  variables.tf
terraform/modules/backend/: backend.tf  iam.tf  outputs.tf
terraform/modules/frontend/: frontend.tf  iam.tf  outputs.tf  variables.tf
tests/: get_visitors_integration.rs  update_visitors_integration.rs
