[package]
name = "cloud-resume-challenge-rust"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.6.3"
aws-sdk-dynamodb = "1.78.0"
lambda_http = "0.15.0"


tokio = { version = "1.45.1", features = ["macros"] }
tower-http = { version = "0.6.4", features = ["cors"] }

[lib]
name = "cloud_resume_challenge_rust"
path = "src/lib.rs"